Fix mob menu social list alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -1101,5 +1101,6 @@ img {
 .menu-social-list {
   display: flex;
   margin: 0 auto;
+  justify-content: center;
   gap: 40px;
 }
